remove not used code

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <!--
 	use under the CCA 3.0 license (html5up.net/license) Paradigm Shift by HTML5 UP html5up.net | @ajlkn
 -->
-<html>
+<html lang="en">
 
 <head>
 	<title>Justin K Lee</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
+	<meta name="description" content="Full Stack Engineer Justin K Lee - Portfolio showcasing web applications and development skills" />
+	<meta name="keywords" content="full stack developer, react, ruby on rails, javascript, typescript" />
 	<link rel="icon" href="images/Vectorfinalplane.svg" type="image/x-icon" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
@@ -24,13 +24,13 @@
 		<section class="intro">
 			<header>
 				<h1>Justin K Lee</h1>
-				<p>Full Stack Engineer who enjoys solving problems and hiking trails in the nature<a href=""></a>
+				<p>Full Stack Engineer who enjoys solving problems and hiking trails in the nature</p>
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
 			</header>
 			<div class="content">
-				<span class="image fill" data-position="center"><img src="images/pic4.jpg" alt="" /></span>
+				<span class="image fill" data-position="center"><img src="images/pic4.jpg" alt="Justin K Lee portrait" /></span>
 			</div>
 		</section>
 
@@ -44,7 +44,7 @@
 					learning new technologies and ideas from the process.
 					When I am not working I spend my time with my family and also enjoy hiking trails in the nature.
 				</p>
-				<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
+				<span class="image main"><img src="images/pic5.JPG" alt="Justin in India" /></span>
 			</div>
 		</section>
 
@@ -54,37 +54,26 @@
 				<h2>Main Skill Set</h2>
 			</header>
 			<div class="content">
-				<p><strong style="font-size: 1.25rem">TOOLS</strong> </p>
+				<p><strong style="font-size: 1.25rem">TOOLS</strong></p>
 				<ul class="feature-icons">
-					<li><span class="iconify solid feature-icons" data-icon="logos:react"
-							data-inline="false"></span>React</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:redux"
-							data-inline="false"></span>Redux</li>
-					<li><span class="iconify" data-icon="logos:typescript-icon" data-inline="false"></span>TypeScript</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:javascript"
-								data-inline="false"></span>JavaScript</li>
-					<li><span class="iconify solid feature-icons" data-icon="mdi:language-ruby-on-rails"
-									data-inline="false"></span>Ruby on Rails</li>
-					<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby</li>
-					<li><span class="iconify" data-icon="logos:aws" data-inline="false"></span> AWS</li>
-					<li><span class="iconify" data-icon="logos:firebase" data-inline="false"></span>Firebase</li>
-					<li><span class="iconify" data-icon="logos:graphql" data-inline="false"></span>GraphQL</li>
-					<li><span class="iconify" data-icon="logos:gatsby" data-inline="false"></span>Gatsby</li>
-					<li><span class="iconify solid feather-icons" data-icon="logos:postgresql"
-						data-inline="false"></span>PostgreSQL</li>
-					<li><span class="iconify solid feather-icons" data-icon="logos:mysql"
-						data-inline="false"></span>MySQL</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:jquery"
-						data-inline="false"></span>JQuery</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:d3" data-inline="false"></span>D3
-					</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:css-3"
-							data-inline="false"></span>CSS3</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:html-5"
-							data-inline="false"></span>HTML5</li>
-					<li><span class="iconify" data-icon="logos:ant-design" data-inline="false"></span>Ant Design</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:git-icon"
-							data-inline="false"></span>Git</li>
+					<li><span class="iconify" data-icon="logos:react"></span>React</li>
+					<li><span class="iconify" data-icon="logos:redux"></span>Redux</li>
+					<li><span class="iconify" data-icon="logos:typescript-icon"></span>TypeScript</li>
+					<li><span class="iconify" data-icon="logos:javascript"></span>JavaScript</li>
+					<li><span class="iconify" data-icon="mdi:language-ruby-on-rails"></span>Ruby on Rails</li>
+					<li><span class="iconify" data-icon="logos:ruby"></span>Ruby</li>
+					<li><span class="iconify" data-icon="logos:aws"></span>AWS</li>
+					<li><span class="iconify" data-icon="logos:firebase"></span>Firebase</li>
+					<li><span class="iconify" data-icon="logos:graphql"></span>GraphQL</li>
+					<li><span class="iconify" data-icon="logos:gatsby"></span>Gatsby</li>
+					<li><span class="iconify" data-icon="logos:postgresql"></span>PostgreSQL</li>
+					<li><span class="iconify" data-icon="logos:mysql"></span>MySQL</li>
+					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
+					<li><span class="iconify" data-icon="logos:d3"></span>D3</li>
+					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
+					<li><span class="iconify" data-icon="logos:html-5"></span>HTML5</li>
+					<li><span class="iconify" data-icon="logos:ant-design"></span>Ant Design</li>
+					<li><span class="iconify" data-icon="logos:git-icon"></span>Git</li>
 				</ul>
 			</div>
 		</section>
@@ -105,25 +94,23 @@
 							Asynchoronous Thunks middleware. Modular CSS for local scoping. Responsive flex and grid design.</p>
 					</header>
 					<div class="content">
-						<div class="#">
-							<a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank"><img
-									src="images/collectors.gif" alt="collectors_screenshot" style="width: 600px;" /></a>
+						<div class="project-image">
+							<a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank" rel="noopener">
+								<img src="images/collectors.gif" alt="Collectors e-commerce app demo" />
+							</a>
 						</div>
-						<div><a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank">
-								<strong>
-									<p>Live Site</p>
-								</strong></a></div>
+						<div><a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank" rel="noopener">
+								<strong>Live Site</strong></a></div>
 						<div>
-							<a href="https://github.com/DevNeoLee/redux-ecommerce-store" target="_blank">
-								<strong>
-									<p>GitHub Repository</p>
-								</strong></a>
+							<a href="https://github.com/DevNeoLee/redux-ecommerce-store" target="_blank" rel="noopener">
+								<strong>GitHub Repository</strong></a>
 						</div>
 					</div>
 				</section>
+				
 				<section>
 					<header>
-						<h3 style="padding: 2rem 0 0 0">Share Desk</h3>
+						<h3>Share Desk</h3>
 						<p>Share Desk App. Providing work spaces any where around the world instantly by searching local availability. Hosting spaces in your
 							houses, apartments, or offices for profit. Ruby on Rails Backend, Turbolink and Stimulus.js
 							Ajax calls for infinite scrolling, JavaScript, Bootstrap, Jquery DOM manipulation,
@@ -133,17 +120,16 @@
 							by WeWork and Air B&B.</p>
 					</header>
 					<div class="content">
-						<div class="site_frame">
-							<a href="https://sharedesk1.onrender.com/" target="_blank"><img
-									src="images/share_desk.gif" alt="Sharedesk_screenshot" style="width: 600px; " /></a>
+						<div class="project-image">
+							<a href="https://sharedesk1.onrender.com/" target="_blank" rel="noopener">
+								<img src="images/share_desk.gif" alt="Share Desk app demo" />
+							</a>
 						</div>
-						<div><a href="https://sharedesk1.onrender.com/" target="_blank"><strong>
-									<p>Live Site</p>
-								</strong></a></div>
+						<div><a href="https://sharedesk1.onrender.com/" target="_blank" rel="noopener">
+								<strong>Live Site</strong></a></div>
 						<div>
-							<a href="https://github.com/DevNeoLee/Sharedesk_2023" target="_blank"><strong>
-									<p>GitHub Repository</p>
-								</strong></a>
+							<a href="https://github.com/DevNeoLee/Sharedesk_2023" target="_blank" rel="noopener">
+								<strong>GitHub Repository</strong></a>
 						</div>
 					</div>
 				</section>
@@ -155,23 +141,19 @@
 						Canada for instant knowledge of perception and cognition of the big data. Data Transformations such as aggregation and 
 						filtering for visualization and structured into objects suitable for different forms of visual charts such as doughnut, map, and bar.
 						Manipulating DOM elements dynamically and interactively using searching and sorting JSON and CSV data sets from Statistics Canada. 
-						Responsive flex and grid design. </p>
+						Responsive flex and grid design.</p>
 					</header>
 					<div class="content">
-						<div class="#">
-							<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank"><img
-									src="images/travel_data_d3.gif" alt="data_charts_travelers_to_Canada"
-									style="width: 600px" /></a>
+						<div class="project-image">
+							<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank" rel="noopener">
+								<img src="images/travel_data_d3.gif" alt="Canada tourist data visualization demo" />
+							</a>
 						</div>
-						<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank">
-								<strong>
-									<p>Live Site</p>
-								</strong></a></div>
+						<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank" rel="noopener">
+								<strong>Live Site</strong></a></div>
 						<div>
-							<a href="https://github.com/DevNeoLee/Canada_Tourist_Chart_d3" target="_blank">
-								<strong>
-									<p>GitHub Repository</p>
-								</strong></a>
+							<a href="https://github.com/DevNeoLee/Canada_Tourist_Chart_d3" target="_blank" rel="noopener">
+								<strong>GitHub Repository</strong></a>
 						</div>
 					</div>
 				</section>
@@ -188,20 +170,18 @@
 				<form action="https://formspree.io/xknrvzqv" method="POST">
 					<div class="fields">
 						<div class="field half">
-							<input type="text" name="name" id="name" placeholder="Name" />
+							<input type="text" name="name" id="name" placeholder="Name" required />
 						</div>
 						<div class="field half">
-							<input type="email" name="email" id="email" placeholder="Email" />
+							<input type="email" name="email" id="email" placeholder="Email" required />
 						</div>
 						<div class="field">
-							<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+							<textarea name="message" id="message" placeholder="Message" rows="7" required></textarea>
 						</div>
 					</div>
 					<ul class="actions">
-						<input type="hidden" name="_next" value="https://mysite.com/thanks.html" />
 						<li><input type="submit" value="Send Message" class="button primary" /></li>
 					</ul>
-					<input type="hidden" name="_next" value="https://mysite.com/thanks.html" />
 				</form>
 			</div>
 			<footer>
@@ -216,18 +196,16 @@
 					</li>
 					<li>
 						<h3>Address</h3>
-						<span>Vanouver/ San Francisco/ New York</span>
+						<span>Vancouver/ San Francisco/ New York</span>
 					</li>
 					<li>
-						<!-- <h3><a target="_blank" href="#">Check my resume</a></h3> -->
 						<ul class="icons">
-							<li>LinkedIn <a target="_blank" href="https://www.linkedin.com/in/justinklee215/"
+							<li>LinkedIn <a target="_blank" href="https://www.linkedin.com/in/justinklee215/" rel="noopener"
 									class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee"
+							<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee" rel="noopener"
 									class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li>AngelList <a target="_blank" href="https://angel.co/justinklee215"
+							<li>AngelList <a target="_blank" href="https://angel.co/justinklee215" rel="noopener"
 									class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
-
 						</ul>
 					</li>
 				</ul>
