--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
 
 	<!-- Wrapper -->
 	<div id="wrapper">
-
 		<!-- Intro -->
 		<section class="intro">
 			<header>
 				<h1>Justin K Lee</h1>
-				<p>Full Stack Engineer who enjoys solving problems and hiking trails in the nature</p>
+				<section>
+					<header>
+						<h4>Full Stack Engineer who enjoys solving problems and hiking trails in the nature</h4>
+					</header>
+				</section>
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
 			</header>
 			<div class="content">
+			
 				<span class="image fill" data-position="center"><img src="images/pic4.jpg" alt="Justin K Lee portrait" /></span>
 			</div>
 		</section>
@@ -56,24 +60,37 @@
 			<div class="content">
 				<p><strong style="font-size: 1.25rem">TOOLS</strong></p>
 				<ul class="feature-icons">
+					<li><span class="iconify" data-icon="devicon:nextjs"></span>NextJS</li>
+					<li><span class="iconify" data-icon="logos:typescript-icon"></span>TypeScript</li>
 					<li><span class="iconify" data-icon="logos:react"></span>React</li>
 					<li><span class="iconify" data-icon="logos:redux"></span>Redux</li>
-					<li><span class="iconify" data-icon="logos:typescript-icon"></span>TypeScript</li>
+					<li><span class="iconify" data-icon="devicon:mongodb"></span>MongoDB</li>
+					<li><span class="iconify" data-icon="devicon:express"></span>Express</li>
+					<li><span class="iconify" data-icon="logos:websocket"></span>WebSocket</li>
 					<li><span class="iconify" data-icon="logos:javascript"></span>JavaScript</li>
+					<li><span class="iconify" data-icon="logos:hugging-face-icon"></span>HuggingFace</li>
+					<li><span class="iconify" data-icon="logos:postgresql"></span>PostgreSQL</li>
+					<li><span class="iconify" data-icon="devicon:mysql"></span>MySQL</li>
+					<li><span class="iconify" data-icon="simple-icons:reactquery"></span>ReactQuery</li>		
 					<li><span class="iconify" data-icon="mdi:language-ruby-on-rails"></span>Ruby on Rails</li>
 					<li><span class="iconify" data-icon="logos:ruby"></span>Ruby</li>
+					<li><span class="iconify" data-icon="devicon:vitest"></span>Vitest</li>
 					<li><span class="iconify" data-icon="logos:aws"></span>AWS</li>
+					<li><span class="iconify" data-icon="logos:google-cloud"></span>GoogleCloud</li>
 					<li><span class="iconify" data-icon="logos:firebase"></span>Firebase</li>
 					<li><span class="iconify" data-icon="logos:graphql"></span>GraphQL</li>
 					<li><span class="iconify" data-icon="logos:gatsby"></span>Gatsby</li>
-					<li><span class="iconify" data-icon="logos:postgresql"></span>PostgreSQL</li>
-					<li><span class="iconify" data-icon="logos:mysql"></span>MySQL</li>
-					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
+					<li><span class="iconify" data-icon="logos:git-icon"></span>Git</li>
+					<li><span class="iconify" data-icon="logos:zod"></span>Zod</li>
 					<li><span class="iconify" data-icon="logos:d3"></span>D3</li>
+					<li><span class="iconify" data-icon="simple-icons:mui"></span>MUI</li>
+					<li><span class="iconify" data-icon="logos:tailwindcss-icon"></span>TailwindCSS</li>
+			
+					<li><span class="iconify" data-icon="simple-icons:shadcnui"></span>ShadCN</li>
+					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
 					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
 					<li><span class="iconify" data-icon="logos:html-5"></span>HTML5</li>
-					<li><span class="iconify" data-icon="logos:ant-design"></span>Ant Design</li>
-					<li><span class="iconify" data-icon="logos:git-icon"></span>Git</li>
+					<li><span class="iconify" data-icon="simple-icons:ollama"></span>Ollama</li>
 				</ul>
 			</div>
 		</section>
@@ -84,12 +101,40 @@
 				<h2>Works</h2>
 			</header>
 			<div class="content">
-
+				<section>
+					<header></header>
+					<div>
+				</section>
 				<!-- Section -->
 				<section>
 					<header>
+						<h3>Share Desk</h3>
+						<p class="paragraph">Share Desk App is a global platform that allows users to instantly find and book workspaces anywhere in the world by searching for local availability. Users can reserve desks in real time, while hosts have the opportunity to earn income by listing unused spaces in their homes, apartments, or offices.
+
+The application is built with a Ruby on Rails backend and utilizes Turbolinks and Stimulus.js for a fast and dynamic front-end experience. Infinite scrolling is implemented through Ajax calls, and JavaScript and jQuery are used for DOM manipulation and interactivity. The design is responsive, using both Flexbox and CSS Grid to ensure a smooth user experience across devices.
+
+Data is stored in a PostgreSQL database and deployed via Heroku. User authentication is handled through Google and Facebook using OmniAuth. The app integrates the Google Maps API with Geocoding to help users locate spaces easily. File storage is managed through Amazon AWS S3.
+
+Key features include a reservation system with a datepicker, custom user profiles, the ability to host and manage listings, advanced search functionality, and a customer star rating system. The platform draws inspiration from industry leaders like WeWork and Airbnb, aiming to provide a seamless and modern experience for both guests and hosts.</p>
+					</header>
+					<div class="content">
+						<div class="project-image">
+							<a href="https://sharedesk1.onrender.com/" target="_blank" rel="noopener">
+								<img src="images/share_desk.gif" alt="Share Desk app demo" />
+							</a>
+						</div>
+						<div><a href="https://sharedesk1.onrender.com/" target="_blank" rel="noopener">
+								<strong>Live Site</strong></a></div>
+						<div>
+							<a href="https://github.com/DevNeoLee/Sharedesk2025" target="_blank" rel="noopener">
+								<strong>GitHub Repository</strong></a>
+						</div>
+					</div>
+				</section>
+				<section>
+					<header>
 						<h3>Collectors</h3>
-						<p>E-Commerce shopping, checkout cart, and payment system app. React/Redux frontend global state management with JavaScript ES6. Firebase backend with Google Omniauth user authentification and products data.
+						<p class="paragraph">E-Commerce shopping, checkout cart, and payment system app. React/Redux frontend global state management with JavaScript ES6. Firebase backend with Google Omniauth user authentification and products data.
 							Stripe payment system. Performance enhancement with selectors memoization, state normalization, code splitting, React Lazy and Suspense, nested routing, HOC patterns, and React DevTools profiler.
 							Asynchoronous Thunks middleware. Modular CSS for local scoping. Responsive flex and grid design.</p>
 					</header>
@@ -108,36 +153,12 @@
 					</div>
 				</section>
 				
-				<section>
-					<header>
-						<h3>Share Desk</h3>
-						<p>Share Desk App. Providing work spaces any where around the world instantly by searching local availability. Hosting spaces in your
-							houses, apartments, or offices for profit. Ruby on Rails Backend, Turbolink and Stimulus.js
-							Ajax calls for infinite scrolling, JavaScript, Bootstrap, Jquery DOM manipulation,
-							Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode,
-							Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching,
-							Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired
-							by WeWork and Air B&B.</p>
-					</header>
-					<div class="content">
-						<div class="project-image">
-							<a href="https://sharedesk1.onrender.com/" target="_blank" rel="noopener">
-								<img src="images/share_desk.gif" alt="Share Desk app demo" />
-							</a>
-						</div>
-						<div><a href="https://sharedesk1.onrender.com/" target="_blank" rel="noopener">
-								<strong>Live Site</strong></a></div>
-						<div>
-							<a href="https://github.com/DevNeoLee/Sharedesk_2023" target="_blank" rel="noopener">
-								<strong>GitHub Repository</strong></a>
-						</div>
-					</div>
-				</section>
+		
 
 				<section>
 					<header>
 						<h3>Travelers to Canada</h3>
-						<p>Interactive Datavisualization with D3 JavaScript library representing large set of historical visitor statistics to
+						<p class="paragraph">Interactive Datavisualization with D3 JavaScript library representing large set of historical visitor statistics to
 						Canada for instant knowledge of perception and cognition of the big data. Data Transformations such as aggregation and 
 						filtering for visualization and structured into objects suitable for different forms of visual charts such as doughnut, map, and bar.
 						Manipulating DOM elements dynamically and interactively using searching and sorting JSON and CSV data sets from Statistics Canada. 
@@ -192,7 +213,7 @@
 					</li>
 					<li>
 						<h3>Phone</h3>
-						<span>(604)787-1185</span>
+						<span>(604)808-7577</span>
 					</li>
 					<li>
 						<h3>Address</h3>
