--- a/index.html
+++ b/index.html
@@ -134,20 +134,19 @@ Key features include a reservation system with a datepicker, custom user profile
 				<section>
 					<header>
 						<h3>Collectors</h3>
-						<p class="paragraph">E-Commerce shopping, checkout cart, and payment system app. React/Redux frontend global state management with JavaScript ES6. Firebase backend with Google Omniauth user authentification and products data.
-							Stripe payment system. Performance enhancement with selectors memoization, state normalization, code splitting, React Lazy and Suspense, nested routing, HOC patterns, and React DevTools profiler.
-							Asynchoronous Thunks middleware. Modular CSS for local scoping. Responsive flex and grid design.</p>
+						<p class="paragraph">Collectors E-Commerce Store is a premium e-commerce platform specifically designed for DVD and Blu-ray collectors, built with React 17 and Redux for robust state management. The application leverages Firebase as a comprehensive backend solution, implementing Google OAuth authentication for seamless user registration and login processes, while utilizing Firestore for real-time data persistence and user profile management. The platform integrates Stripe payment processing to ensure secure and reliable checkout experiences for customers purchasing rare and collectible media items.
+Technical sophistication is demonstrated through the implementation of Redux Persist for cart state persistence across browser sessions, Reselect library for memoized selectors that optimize performance by preventing unnecessary re-renders, and React Lazy with Suspense for dynamic code splitting that reduces initial bundle size and improves loading times. The application employs modular SCSS architecture for maintainable and scalable styling, while utilizing responsive Flex and Grid layouts to deliver a mobile-first user experience. Advanced state management is achieved through Redux Thunk middleware for handling asynchronous operations and complex side effects, while Higher-Order Component (HOC) patterns ensure component reusability and clean separation of concerns. The project showcases modern React development practices including state normalization for large datasets, nested routing for dynamic route generation, and comprehensive error handling throughout the authentication and payment flows.</p>
 					</header>
 					<div class="content">
 						<div class="project-image">
-							<a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank" rel="noopener">
+							<a href="https://collectors2025.vercel.app/" target="_blank" rel="noopener">
 								<img src="images/collectors.gif" alt="Collectors e-commerce app demo" />
 							</a>
 						</div>
-						<div><a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank" rel="noopener">
+						<div><a href="https://collectors2025.vercel.app/" target="_blank" rel="noopener">
 								<strong>Live Site</strong></a></div>
 						<div>
-							<a href="https://github.com/DevNeoLee/redux-ecommerce-store" target="_blank" rel="noopener">
+							<a href="https://github.com/DevNeoLee/Collectors2025" target="_blank" rel="noopener">
 								<strong>GitHub Repository</strong></a>
 						</div>
 					</div>
