--- a/index.html
+++ b/index.html
@@ -109,13 +109,8 @@
 				<section>
 					<header>
 						<h3>Share Desk</h3>
-						<p class="paragraph">Share Desk App is a global platform that allows users to instantly find and book workspaces anywhere in the world by searching for local availability. Users can reserve desks in real time, while hosts have the opportunity to earn income by listing unused spaces in their homes, apartments, or offices.
-
-The application is built with a Ruby on Rails backend and utilizes Turbolinks and Stimulus.js for a fast and dynamic front-end experience. Infinite scrolling is implemented through Ajax calls, and JavaScript and jQuery are used for DOM manipulation and interactivity. The design is responsive, using both Flexbox and CSS Grid to ensure a smooth user experience across devices.
-
-Data is stored in a PostgreSQL database and deployed via Heroku. User authentication is handled through Google and Facebook using OmniAuth. The app integrates the Google Maps API with Geocoding to help users locate spaces easily. File storage is managed through Amazon AWS S3.
-
-Key features include a reservation system with a datepicker, custom user profiles, the ability to host and manage listings, advanced search functionality, and a customer star rating system. The platform draws inspiration from industry leaders like WeWork and Airbnb, aiming to provide a seamless and modern experience for both guests and hosts.</p>
+						<p class="paragraph">Workspace rental platform that enables users to list and book private workspaces, offices, and desk spaces for short-term rental. The application features advanced location-based search with Google Maps integration, real-time availability tracking, secure payment-ready reservation system, and social authentication through Google and Facebook OAuth. Users can upload multiple workspace images, manage bookings through an intuitive dashboard, and leave star-rated reviews. The platform includes sophisticated search filters, infinite scroll pagination, and responsive mobile-first design to ensure seamless experience across all devices.
+Full-stack implementation utilizes Ruby on Rails 7.1.5.1 with Ruby 3.3.0, PostgreSQL for data persistence, and Stimulus.js for modern JavaScript interactions. The frontend leverages Bootstrap 5 for responsive UI components, while backend services integrate with Google Maps API for geolocation services, AWS S3 for scalable file storage, and Render.com for cloud deployment. Technological significance includes implementing fallback systems for critical APIs to ensure production reliability, developing custom Stimulus controllers for infinite scroll and real-time form handling, and creating a robust authentication system with Devise and OmniAuth. The application demonstrates modern Rails practices with importmaps for JavaScript module management, Active Storage for file handling, and Ransack for advanced search capabilities. The architecture showcases scalable cloud deployment strategies and comprehensive error handling for enterprise-level reliability.</p>
 					</header>
 					<div class="content">
 						<div class="project-image">
@@ -134,8 +129,8 @@ Key features include a reservation system with a datepicker, custom user profile
 				<section>
 					<header>
 						<h3>Collectors</h3>
-						<p class="paragraph">Collectors E-Commerce Store is a premium e-commerce platform specifically designed for DVD and Blu-ray collectors, built with React 17 and Redux for robust state management. The application leverages Firebase as a comprehensive backend solution, implementing Google OAuth authentication for seamless user registration and login processes, while utilizing Firestore for real-time data persistence and user profile management. The platform integrates Stripe payment processing to ensure secure and reliable checkout experiences for customers purchasing rare and collectible media items.
-Technical sophistication is demonstrated through the implementation of Redux Persist for cart state persistence across browser sessions, Reselect library for memoized selectors that optimize performance by preventing unnecessary re-renders, and React Lazy with Suspense for dynamic code splitting that reduces initial bundle size and improves loading times. The application employs modular SCSS architecture for maintainable and scalable styling, while utilizing responsive Flex and Grid layouts to deliver a mobile-first user experience. Advanced state management is achieved through Redux Thunk middleware for handling asynchronous operations and complex side effects, while Higher-Order Component (HOC) patterns ensure component reusability and clean separation of concerns. The project showcases modern React development practices including state normalization for large datasets, nested routing for dynamic route generation, and comprehensive error handling throughout the authentication and payment flows.</p>
+						<p class="paragraph">Full-stack e-commerce application for premium movie and media collectors, showcasing mastery of modern React development patterns and enterprise-level architecture. The application features a comprehensive product catalog spanning five specialized categories (Movies, Animation, TV Series, Rare Collections, Sports/Arts) with over 40 premium products, implementing advanced state management through Redux Toolkit with persistent cart functionality and real-time user authentication via Firebase Auth.
+Built with React 19 and TypeScript for type safety, the application demonstrates advanced performance optimization techniques including React.memo for component memoization, lazy loading with React.Suspense for code splitting, and custom hooks for logic reusability. The architecture implements Redux Toolkit's modern state management patterns with selective persistence using redux-persist, while integrating Stripe Checkout for secure payment processing. The application showcases responsive design principles with SCSS Modules for component-scoped styling, comprehensive error handling through Error Boundaries, and accessibility features including ARIA labels and keyboard navigation. The Firebase integration demonstrates real-time data synchronization with Firestore, implementing efficient user profile management and authentication state persistence. The development workflow utilizes Vite for rapid development and optimized builds, while maintaining clean code architecture through ESLint configuration and TypeScript strict mode compliance.</p>
 					</header>
 					<div class="content">
 						<div class="project-image">
@@ -157,11 +152,8 @@ Technical sophistication is demonstrated through the implementation of Redux Per
 				<section>
 					<header>
 						<h3>Travelers to Canada</h3>
-						<p class="paragraph">Interactive Datavisualization with D3 JavaScript library representing large set of historical visitor statistics to
-						Canada for instant knowledge of perception and cognition of the big data. Data Transformations such as aggregation and 
-						filtering for visualization and structured into objects suitable for different forms of visual charts such as doughnut, map, and bar.
-						Manipulating DOM elements dynamically and interactively using searching and sorting JSON and CSV data sets from Statistics Canada. 
-						Responsive flex and grid design.</p>
+						<p class="paragraph">Fully interactive data visualization dashboard built with TypeScript, D3.js (v7), and Vite, designed to present 20 years of Canadian tourism statistics in a single, responsive web page. Leveraging modern web technologies and best practices—including modular TypeScript architecture, CSS Grid/Flexbox layouts, and scalable SVG graphics—the application delivers a seamless user experience where all key insights (bar chart, pie chart, map, and controls) are visible at a glance.
+Key technical highlights include advanced D3.js charting (threshold, linear, and square-root scales), real-time data filtering, and a robust, maintainable codebase with strict linting and type safety.</p>
 					</header>
 					<div class="content">
 						<div class="project-image">
