--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@ Key technical highlights include advanced D3.js charting (threshold, linear, and
 					</header>
 					<div class="content">
 						<div class="project-image">
-							<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank" rel="noopener">
+							<a href="https://d3-canada-tourist2025.vercel.app" target="_blank" rel="noopener">
 								<img src="images/travel_data_d3.gif" alt="Canada tourist data visualization demo" />
 							</a>
 						</div>
-						<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank" rel="noopener">
+						<div><a href="https://d3-canada-tourist2025.vercel.app/" target="_blank" rel="noopener">
 								<strong>Live Site</strong></a></div>
 						<div>
-							<a href="https://github.com/DevNeoLee/Canada_Tourist_Chart_d3" target="_blank" rel="noopener">
+							<a href="https://github.com/DevNeoLee/D3_CanadaTourist2025" target="_blank" rel="noopener">
 								<strong>GitHub Repository</strong></a>
 						</div>
 					</div>
