add dynamic year on footer

--- a/index.html
+++ b/index.html
@@ -63,34 +63,38 @@
 					<li><span class="iconify" data-icon="devicon:nextjs"></span>NextJS</li>
 					<li><span class="iconify" data-icon="logos:typescript-icon"></span>TypeScript</li>
 					<li><span class="iconify" data-icon="logos:react"></span>React</li>
-					<li><span class="iconify" data-icon="logos:redux"></span>Redux</li>
-					<li><span class="iconify" data-icon="devicon:mongodb"></span>MongoDB</li>
-					<li><span class="iconify" data-icon="devicon:express"></span>Express</li>
-					<li><span class="iconify" data-icon="logos:websocket"></span>WebSocket</li>
 					<li><span class="iconify" data-icon="logos:javascript"></span>JavaScript</li>
-					<li><span class="iconify" data-icon="logos:hugging-face-icon"></span>HuggingFace</li>
+					<li><span class="iconify" data-icon="logos:redux"></span>Redux</li>
+					<li><span class="iconify" data-icon="devicon:express"></span>Express</li>
+					<li><span class="iconify" data-icon="logos:ruby"></span>Ruby</li>
+					<li><span class="iconify" data-icon="mdi:language-ruby-on-rails"></span>Ruby on Rails</li>
 					<li><span class="iconify" data-icon="logos:postgresql"></span>PostgreSQL</li>
 					<li><span class="iconify" data-icon="devicon:mysql"></span>MySQL</li>
-					<li><span class="iconify" data-icon="simple-icons:reactquery"></span>ReactQuery</li>		
-					<li><span class="iconify" data-icon="mdi:language-ruby-on-rails"></span>Ruby on Rails</li>
-					<li><span class="iconify" data-icon="logos:ruby"></span>Ruby</li>
+					<li><span class="iconify" data-icon="devicon:mongodb"></span>MongoDB</li>
 					<li><span class="iconify" data-icon="devicon:vitest"></span>Vitest</li>
 					<li><span class="iconify" data-icon="logos:aws"></span>AWS</li>
 					<li><span class="iconify" data-icon="logos:google-cloud"></span>GoogleCloud</li>
+					<li><span class="iconify" data-icon="logos:websocket"></span>WebSocket</li>
+
+
+					<li><span class="iconify" data-icon="simple-icons:reactquery"></span>ReactQuery</li>		
+	
+
 					<li><span class="iconify" data-icon="logos:firebase"></span>Firebase</li>
 					<li><span class="iconify" data-icon="logos:graphql"></span>GraphQL</li>
 					<li><span class="iconify" data-icon="logos:gatsby"></span>Gatsby</li>
 					<li><span class="iconify" data-icon="logos:git-icon"></span>Git</li>
+					<li><span class="iconify" data-icon="logos:hugging-face-icon"></span>HuggingFace</li>
+					<li><span class="iconify" data-icon="simple-icons:ollama"></span>Ollama</li>
 					<li><span class="iconify" data-icon="logos:zod"></span>Zod</li>
 					<li><span class="iconify" data-icon="logos:d3"></span>D3</li>
 					<li><span class="iconify" data-icon="simple-icons:mui"></span>MUI</li>
 					<li><span class="iconify" data-icon="logos:tailwindcss-icon"></span>TailwindCSS</li>
-			
 					<li><span class="iconify" data-icon="simple-icons:shadcnui"></span>ShadCN</li>
 					<li><span class="iconify" data-icon="logos:jquery"></span>JQuery</li>
 					<li><span class="iconify" data-icon="logos:css-3"></span>CSS3</li>
 					<li><span class="iconify" data-icon="logos:html-5"></span>HTML5</li>
-					<li><span class="iconify" data-icon="simple-icons:ollama"></span>Ollama</li>
+				
 				</ul>
 			</div>
 		</section>
@@ -225,7 +229,7 @@ Key technical highlights include advanced D3.js charting (threshold, linear, and
 		</section>
 
 		<!-- Copyright -->
-		<div class="copyright">&copy; <a href="https://devneolee.github.io/justinklee/">Justin K Lee</a> All rights reserved. <br>Design: <a href="https://html5up.net">HTML5
+		<div class="copyright">&copy; <a href="https://devneolee.github.io/justinklee/">Justin K Lee</a> <span id="current-year"></span> All rights reserved. <br>Design: <a href="https://html5up.net">HTML5
 				UP</a><br> Icons: <a href="https://iconify.design/">Iconify</a></div>
 
 	</div>
