update collectorsGif file

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Built with React 19 and TypeScript for type safety, the application demonstrates
 					<div class="content">
 						<div class="project-image">
 							<a href="https://collectors2025.vercel.app/" target="_blank" rel="noopener">
-								<img src="images/collectors.gif" alt="Collectors e-commerce app demo" />
+								<img src="images/collectorsGif2025.gif" alt="Collectors e-commerce app demo" />
 							</a>
 						</div>
 						<div><a href="https://collectors2025.vercel.app/" target="_blank" rel="noopener">
@@ -230,8 +230,8 @@ Key technical highlights include advanced D3.js charting (threshold, linear, and
 
 		<!-- Copyright -->
 		<div class="copyright">&copy; <a href="https://devneolee.github.io/justinklee/">Justin K Lee</a> <span id="current-year"></span> All rights reserved. <br>Design: <a href="https://html5up.net">HTML5
-				UP</a><br> Icons: <a href="https://iconify.design/">Iconify</a></div>
-
+				UP</a><br> Icons: <a href="https://iconify.design/">Iconify</a>
+		</div>
 	</div>
 
 	<!-- Scripts -->
