--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				<h1>Justin K Lee</h1>
 				<section>
 					<header>
-						<h4>Full Stack Engineer who enjoys solving problems and hiking trails in the nature</h4>
+						<h4>Full‑Stack Engineer with more than four years of experience building real-world products in agile, collaborative team environments.
+Nature hiker, museum wanderer, and lifelong learner at heart</h4>
 					</header>
 				</section>
 				<ul class="actions">
@@ -44,9 +45,11 @@
 				<h2>Who I am</h2>
 			</header>
 			<div class="content">
-				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I build web application. I enjoy
-					learning new technologies and ideas from the process.
-					When I am not working I spend my time with my family and also enjoy hiking trails in the nature.
+				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I’m a Full‑Stack Developer with more than four years of professional experience contributing to scalable web applications as part of agile, cross-functional teams. I enjoy solving complex problems with clean, efficient code, and continuously explore new technologies to improve development processes and user experience.
+
+Outside of work, I recharge by spending time with family, hiking scenic trails, and visiting museums wherever I travel. These moments help me stay curious, grounded, and creatively inspired.
+
+I take pride in writing thoughtful code—and being a reliable teammate who brings positive energy to every project.
 				</p>
 				<span class="image main"><img src="images/pic5.JPG" alt="Justin in India" /></span>
 			</div>
@@ -113,8 +116,9 @@
 				<section>
 					<header>
 						<h3>Share Desk</h3>
-						<p class="paragraph">Workspace rental platform that enables users to list and book private workspaces, offices, and desk spaces for short-term rental. The application features advanced location-based search with Google Maps integration, real-time availability tracking, secure payment-ready reservation system, and social authentication through Google and Facebook OAuth. Users can upload multiple workspace images, manage bookings through an intuitive dashboard, and leave star-rated reviews. The platform includes sophisticated search filters, infinite scroll pagination, and responsive mobile-first design to ensure seamless experience across all devices.
-Full-stack implementation utilizes Ruby on Rails 7.1.5.1 with Ruby 3.3.0, PostgreSQL for data persistence, and Stimulus.js for modern JavaScript interactions. The frontend leverages Bootstrap 5 for responsive UI components, while backend services integrate with Google Maps API for geolocation services, AWS S3 for scalable file storage, and Render.com for cloud deployment. Technological significance includes implementing fallback systems for critical APIs to ensure production reliability, developing custom Stimulus controllers for infinite scroll and real-time form handling, and creating a robust authentication system with Devise and OmniAuth. The application demonstrates modern Rails practices with importmaps for JavaScript module management, Active Storage for file handling, and Ransack for advanced search capabilities. The architecture showcases scalable cloud deployment strategies and comprehensive error handling for enterprise-level reliability.</p>
+						<p class="paragraph">A full‑stack workspace rental platform that allows users to list and book private offices and desk spaces around the world. Key features include geolocation-based search with Google Maps API, real-time availability, secure payment flows, and user authentication via Google and Facebook OAuth. The platform also supports listing management, messaging, and a user rating system.</p>
+
+<p>Built with Ruby on Rails 7.1, Stimulus.js, PostgreSQL, Bootstrap 5, and deployed on Render.com. Google Maps and Geocoding API for interactive map search. Media uploads are handled via AWS S3, and the interface includes infinite scrolling, advanced search filters, and responsive UI components. JQuery for dynamic front-end behavior. Authentication is powered by Devise and OmniAuth, with API fallback logic and robust client/server-side error handling ensuring stability.</p>
 					</header>
 					<div class="content">
 						<div class="project-image">
@@ -133,9 +137,13 @@ Full-stack implementation utilizes Ruby on Rails 7.1.5.1 with Ruby 3.3.0, Postgr
 				<section>
 					<header>
 						<h3>Collectors</h3>
-						<p class="paragraph">Full-stack e-commerce application for premium movie and media collectors, showcasing mastery of modern React development patterns and enterprise-level architecture. The application features a comprehensive product catalog spanning five specialized categories (Movies, Animation, TV Series, Rare Collections, Sports/Arts) with over 40 premium products, implementing advanced state management through Redux Toolkit with persistent cart functionality and real-time user authentication via Firebase Auth.
-Built with React 19 and TypeScript for type safety, the application demonstrates advanced performance optimization techniques including React.memo for component memoization, lazy loading with React.Suspense for code splitting, and custom hooks for logic reusability. The architecture implements Redux Toolkit's modern state management patterns with selective persistence using redux-persist, while integrating Stripe Checkout for secure payment processing. The application showcases responsive design principles with SCSS Modules for component-scoped styling, comprehensive error handling through Error Boundaries, and accessibility features including ARIA labels and keyboard navigation. The Firebase integration demonstrates real-time data synchronization with Firestore, implementing efficient user profile management and authentication state persistence. The development workflow utilizes Vite for rapid development and optimized builds, while maintaining clean code architecture through ESLint configuration and TypeScript strict mode compliance.</p>
-					</header>
+						<p class="paragraph">
+A fully responsive, single-page e‑commerce application designed for premium movie and media collectors. Users can browse categorized products, manage shopping carts, and complete secure checkouts. The app integrates with Stripe for payment processing and Firebase for user authentication and backend data management, including support for Google OAuth login.</p>
+
+<p>Built with React 19, Redux Toolkit, and TypeScript, the app uses Thunk middleware for managing async data flows and React Router for client-side routing. Global state is optimized through selector memoization, state normalization, and modular slice-based architecture. The UI is enhanced with code-splitting using React Lazy and Suspense, and performance is monitored via React DevTools profiling.</p>
+
+<p>Key features include: dynamic product catalog with filtering and sorting, persistent shopping cart with local/session storage fallback, Stripe-integrated checkout flow with real-time validation, and deployment-ready setup with Vite</p>
+</header>
 					<div class="content">
 						<div class="project-image">
 							<a href="https://collectors2025.vercel.app/" target="_blank" rel="noopener">
@@ -156,8 +164,9 @@ Built with React 19 and TypeScript for type safety, the application demonstrates
 				<section>
 					<header>
 						<h3>Travelers to Canada</h3>
-						<p class="paragraph">Fully interactive data visualization dashboard built with TypeScript, D3.js (v7), and Vite, designed to present 20 years of Canadian tourism statistics in a single, responsive web page. Leveraging modern web technologies and best practices—including modular TypeScript architecture, CSS Grid/Flexbox layouts, and scalable SVG graphics—the application delivers a seamless user experience where all key insights (bar chart, pie chart, map, and controls) are visible at a glance.
-Key technical highlights include advanced D3.js charting (threshold, linear, and square-root scales), real-time data filtering, and a robust, maintainable codebase with strict linting and type safety.</p>
+						<p class="paragraph">A fully interactive data visualization dashboard built with TypeScript, D3.js (v7), and Vite, designed to showcase 20 years of Canadian tourism statistics within a single, responsive web page. Utilizing modern web standards and best practices—including modular TypeScript architecture, CSS Grid and Flexbox layouts, and scalable SVG graphics—the application offers a seamless user experience where key insights such as bar charts, pie charts, maps, and interactive controls are immediately accessible.</p>
+
+<p>Technical highlights include advanced D3.js charting techniques (including threshold, linear, and square-root scales), real-time data filtering, and a robust, maintainable codebase reinforced by strict linting and strong type safety..</p>
 					</header>
 					<div class="content">
 						<div class="project-image">
